welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:42: error: Unmatched closing brace '}' ignored here
}
^